--- a/seagull_story.ipynb
+++ b/seagull_story.ipynb
@@ -59,6 +59,8 @@
     "* *ELECTRA* introduces *Replace Token Detection Technique* as a replacement for the BERT's *Masked Language Modelling* pre-training task. Instead of using the `[MASK]` special token, the tokens are replaced by alternative samples. This is done using a *generator-discriminator* configuration.\n",
     "* Much like *ALBERT*, *DistilBERT* aims to reduce the model's complexity, but it does so with a different approach. *DistilBERT* implements *knowledge distillation* using a *teacher-student* framework. It goes without saying that *DistilBERT* sacrifices some accuracy.\n",
     "\n",
+    "Read more on  [BERT Variants and their Differences][4].\n",
+    "\n",
     "### Specialized models\n",
     "All the BERT-like models discussed so far, has a lot in common with the original BERT model. In 2020, Microsoft released the paper [*DeBERTa: Decoding-enhanced BERT with Disentangled Attention*](https://arxiv.org/abs/2006.03654), introducing a BERT-like model with rather groundbreaking news.\n",
     "\n",
@@ -66,17 +68,115 @@
     "\n",
     "Moreover, since its 3rd version, *DeBERTa* has adopted the *ELECTRA* pre-training style.\n",
     "\n",
+    "Given the superior performance of *DeBERTa* over the other BERT-like models, we chose it to solve our *NLI* problem.\n",
+    "\n",
     "Read more on  [BERT Variants and their Differences][4].\n",
     "\n",
     "[2]:https://www.geeksforgeeks.org/differences-between-gpt-and-bert/\n",
     "[3]:https://www.geeksforgeeks.org/explanation-of-bert-model-nlp\n",
-    "[4]:https://360digitmg.com/blog/bert-variants-and-their-differences\n"
+    "[4]:https://360digitmg.com/blog/bert-variants-and-their-differences\n",
+    "\n",
+    "## Fine-tuning DeBERTa\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import DebertaTokenizer, DebertaForSequenceClassification\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "story = open('dataset/story.txt').read().replace(\"\\n\\n\",\"\\n\").replace(\"\\n\",\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CLASSES = {\n",
+    "    'yes': 0,\n",
+    "    'irrelevant': 1,\n",
+    "    'no': 2,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 232 \"yes\" questions\n",
+      "Read 112 \"irrelevant\" questions\n",
+      "Read 116 \"no\" questions\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset: list[dict] = []\n",
+    "\n",
+    "for file in CLASSES.keys():\n",
+    "    with open(f'dataset/question/{file}.txt') as f:\n",
+    "        lines = set(f.readlines())\n",
+    "        print(f'Read {len(lines)} \"{file}\" questions')\n",
+    "        dataset.extend(\n",
+    "            map(lambda e: {'question': e.replace('\\n', ''), 'answer': CLASSES[file]}, lines))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "406"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer = DebertaTokenizer.from_pretrained(\"microsoft/deberta-base\")\n",
+    "# model = DebertaForSequenceClassification.from_pretrained(\"microsoft/deberta-base\", num_labels=3)\n",
+    "len(tokenizer(story, truncation=False)[\"input_ids\"])"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
