Review and expand the dataset

--- a/seagull_story.ipynb
+++ b/seagull_story.ipynb
@@ -9,14 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mrpio/.local/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import os\n",
-    "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "# import torch\n",
+    "# from torch.utils.data import Dataset, DataLoader\n",
     "from transformers import DebertaTokenizer, DebertaForSequenceClassification, AdamW, get_scheduler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from tqdm import tqdm"
@@ -31,21 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'torch' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[71], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m LEARNING_RATE \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2e-5\u001b[39m\n\u001b[1;32m     12\u001b[0m MAX_LENGTH \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m512\u001b[39m\n\u001b[1;32m     13\u001b[0m DEVICE \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mdevice(\n\u001b[0;32m---> 14\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available() \u001b[38;5;28;01melse\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "CLASSES = {\n",
     "    'yes': 0,\n",
@@ -59,8 +57,8 @@
     "EPOCHS = 3\n",
     "LEARNING_RATE = 2e-5\n",
     "MAX_LENGTH = 512\n",
-    "DEVICE = torch.device(\n",
-    "    \"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")"
+    "# DEVICE = torch.device(\n",
+    "#     \"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")"
    ]
   },
   {
@@ -72,14 +70,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "story = open(STORY_FILE).read().replace(\"\\n\\n\", \"\\n\").replace(\"\\n\", \" \")\n",
     "tokenizer = DebertaTokenizer.from_pretrained(MODEL_NAME)\n",
-    "model = DebertaForSequenceClassification.from_pretrained(MODEL_NAME, num_labels=3)\n",
-    "model.to(DEVICE)"
+    "# model = DebertaForSequenceClassification.from_pretrained(MODEL_NAME, num_labels=3)\n",
+    "# model.to(DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': [1, 6462, 2, 40018, 2, 0, 0, 0], 'token_type_ids': [0, 0, 0, 1, 1, 0, 0, 0], 'attention_mask': [1, 1, 1, 1, 1, 0, 0, 0]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer('story', 'question', truncation=True, max_length=8, padding=\"max_length\")"
    ]
   },
   {
@@ -89,10 +107,9 @@
    "outputs": [],
    "source": [
     "class NLIDataset(Dataset):\n",
-    "    def __init__(self, data, tokenizer, max_length):\n",
+    "    def __init__(self, data, tokenizer):\n",
     "        self.data = data\n",
     "        self.tokenizer = tokenizer\n",
-    "        self.max_length = max_length\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.data)\n",
@@ -104,7 +121,7 @@
     "        label = item[\"answer\"]\n",
     "\n",
     "        inputs = self.tokenizer(\n",
-    "            passage, question, truncation=True, max_length=self.max_length, padding=\"max_length\", return_tensors=\"pt\"\n",
+    "            story, question, truncation=True, max_length=MAX_LENGTH, padding=\"max_length\", return_tensors=\"pt\"\n",
     "        )\n",
     "\n",
     "        return {\n",
@@ -146,8 +163,8 @@
     "            '\\n', ''), 'answer': CLASSES[file]}, lines))\n",
     "        \n",
     "trainset, testset = train_test_split(dataset, test_size=0.1, random_state=42)\n",
-    "train_dataset = NLIDataset(trainset, tokenizer, MAX_LENGTH)\n",
-    "val_dataset = NLIDataset(testset, tokenizer, MAX_LENGTH)\n",
+    "train_dataset = NLIDataset(trainset, tokenizer)\n",
+    "val_dataset = NLIDataset(testset, tokenizer)\n",
     "\n",
     "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False)"
